<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_document"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.veiber.testmobilegrinyak.AddDocument">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:id="@+id/document_line">
        <TextView
            android:layout_weight = "2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/numberOfDocument"
            android:id="@+id/textView_Document"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="6dp"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
        />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="Номер документа"
            android:id="@+id/number_of_document"
            android:layout_weight="1"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="6dp"
            android:textSize="18sp"
            android:textColor="@color/colorBlue_Grey_800"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/document_line"
        android:id="@+id/contractor_line"
        android:orientation="horizontal">
        <TextView
            android:layout_weight = "2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/contractor"
            android:id="@+id/textView_contractor"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="6dp"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
        />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_contractors"
            android:layout_weight="1"
            android:layout_marginStart="6dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="6dp"
            android:textSize="18sp"
            android:textColor="@color/colorBlue_Grey_800"
            android:scrollbarSize="12dp"
        />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contractor_line"
        android:id="@+id/items_line"
        android:orientation="vertical">
        <TextView
            android:text="Товары"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:id="@+id/textViewItems"
            android:textSize="18sp"
            android:layout_marginLeft="6dp"
            android:layout_below="@id/contractor_line"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/itemsButtons">
            <Button
                android:text="@string/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addItem"
                android:onClick="chooseNewItem"/>
            <Button
                android:text="@string/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/deleteItem" />
        </LinearLayout>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:id="@+id/listItems"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <Button
            android:text="@string/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add"
            android:layout_weight="1"
            android:onClick="addNewDocument"/>

        <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel"
            android:layout_weight="1"
            android:onClick="cancel_action"/>
    </LinearLayout>




</RelativeLayout>
