<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.veiber.testmobilegrinyak.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_weight="1"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/imageNewCatalog"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/add_catalog"
                android:layout_gravity="center_horizontal"/>
            <Button
                android:id="@+id/addNewCatalogItem"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/addNewCatalogItem"
                android:layout_gravity="center_horizontal"
                android:onClick="addNewItemCatalogView"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/imageNewContractor"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/add_contractor"
                android:layout_gravity="center_horizontal"/>
            <Button
                android:id="@+id/addNewContractor"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/addNewContractor"
                android:layout_gravity="center_horizontal"
                android:onClick="addContractor"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayoutBottom"
        android:layout_below="@id/linearLayout"
        android:layout_weight="1"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/imageNewDocument"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/add_floating_button"
                android:layout_gravity="center_horizontal"/>
            <Button
                android:id="@+id/addNewDocument"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/addNewDocument"
                android:layout_gravity="center_horizontal"
                android:onClick="addNewDocument"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/add_floating_button"
                android:layout_gravity="center_horizontal"/>
            <Button

                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="здсь могла быть ваша реклама"
                android:layout_gravity="center_horizontal"
                android:onClick="addContractor"/>

        </LinearLayout>
    </LinearLayout>



</RelativeLayout>
